--- a/index.html
+++ b/index.html
@@ -78,13 +78,14 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 5px;
+            gap: 15px; /* مباعدة أكبر بين النص والأيقونة */
         }
         .buttons a:hover {
             background-color: #5a6268;
         }
-        .buttons a i {
-            font-size: 1.2em;
+        .pdf-icon {
+            width: 20px;
+            height: auto;
         }
         .share-buttons {
             margin: 20px 0;
@@ -124,7 +125,7 @@
             <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الأسرة في الإسلام</div>
             <div class="buttons">
-                <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
+                <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض <img src="icons/pdf-icon.png" alt="PDF Icon" class="pdf-icon"></a>
                 <a href="books/الأسرة في الإسلام.pdf" download>تحميل</a>
             </div>
         </div>
@@ -134,140 +135,13 @@
             <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الطائفية في نظر الاسلام</div>
             <div class="buttons">
-                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
+                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض <img src="icons/pdf-icon.png" alt="PDF Icon" class="pdf-icon"></a>
                 <a href="books/الطائفية في نظر الاسلام.pdf" download>تحميل</a>
             </div>
         </div>
 
-        <!-- الكتاب 3 -->
-        <div class="book">
-            <img src="covers/غلاف بحث حول أوقات الصلاة.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">بحث أوقات الصلاة</div>
-            <div class="buttons">
-                <a href="books/بحث أوقات الصلاة.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
-                <a href="books/بحث أوقات الصلاة.pdf" download>تحميل</a>
-            </div>
-        </div>
+        <!-- باقي الكتب مشابهة -->
 
-        <!-- الكتاب 4 -->
-        <div class="book">
-            <img src="covers/غلاف بحث حول التشويه الجسدي.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">بحث حول التشويه الجسدي</div>
-            <div class="buttons">
-                <a href="books/بحث حول التشويه الجسدي.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
-                <a href="books/بحث حول التشويه الجسدي.pdf" download>تحميل</a>
-            </div>
-        </div>
-
-        <!-- الكتاب 5 -->
-        <div class="book">
-            <img src="covers/غلاف بحث حول التلقيح ا لصناعي.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">بحث حول التلقيح الصناعي</div>
-            <div class="buttons">
-                <a href="books/بحث حول التلقيح الصناعي.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
-                <a href="books/بحث حول التلقيح الصناعي.pdf" download>تحميل</a>
-            </div>
-        </div>
-
-        <!-- الكتاب 6 -->
-        <div class="book">
-            <img src="covers/غلاف بحث حول الغناء.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">بحث حول العناء</div>
-            <div class="buttons">
-                <a href="books/بحث حول العناء.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
-                <a href="books/بحث حول العناء.pdf" download>تحميل</a>
-            </div>
-        </div>
-
-        <!-- الكتاب 7 -->
-        <div class="book">
-            <img src="covers/غلاف بحث حول القصة فقهياً.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">بحث حول القصة فقهياً</div>
-            <div class="buttons">
-                <a href="books/بحث حول القصة فقهياً.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
-                <a href="books/بحث حول القصة فقهياً.pdf" download>تحميل</a>
-            </div>
-        </div>
-
-        <!-- الكتاب 8 -->
-        <div class="book">
-            <img src="covers/غلاف بحث حول الكحول.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">بحث حول الكحول</div>
-            <div class="buttons">
-                <a href="books/بحث حول الكحول.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
-                <a href="books/بحث حول الكحول.pdf" download>تحميل</a>
-            </div>
-        </div>
-
-        <!-- الكتاب 9 -->
-        <div class="book">
-            <img src="covers/غلاف بحث حول خصائص النبي.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">بحث حول خصائص النبي</div>
-            <div class="buttons">
-                <a href="books/بحث حول خصائص النبي (ص).pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
-                <a href="books/بحث حول خصائص النبي (ص).pdf" download>تحميل</a>
-            </div>
-        </div>
-
-        <!-- الكتاب 10 -->
-        <div class="book">
-            <img src="covers/غلاف بحث حول قاعدة الإلزام.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">بحث حول قاعدة الإلزام</div>
-            <div class="buttons">
-                <a href="books/بحث حول قاعدة الإلزام.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
-                <a href="books/بحث حول قاعدة الإلزام.pdf" download>تحميل</a>
-            </div>
-        </div>
-
-        <!-- الكتاب 11 -->
-        <div class="book">
-            <img src="covers/غلاف بحث حول قراءة القرآن.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">بحث حول قراءة القرآن الكريم</div>
-            <div class="buttons">
-                <a href="books/بحث حول قراءة القرآن الكريم.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
-                <a href="books/بحث حول قراءة القرآن الكريم.pdf" download>تحميل</a>
-            </div>
-        </div>
-
-        <!-- الكتاب 12 -->
-        <div class="book">
-            <img src="covers/غلاف فقه الأخلاق ج1.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">فقه الأخلاق (الجزء الأول)</div>
-            <div class="buttons">
-                <a href="books/فقه الأخلاق (الجزء الأول).pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
-                <a href="books/فقه الأخلاق (الجزء الأول).pdf" download>تحميل</a>
-            </div>
-        </div>
-
-        <!-- الكتاب 13 -->
-        <div class="book">
-            <img src="covers/غلاف فقه الأخلاق ج2.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">فقه الأخلاق (الجزء الثاني)</div>
-            <div class="buttons">
-                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
-                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" download>تحميل</a>
-            </div>
-        </div>
-
-        <!-- الكتاب 14 -->
-        <div class="book">
-            <img src="covers/غلاف منة المنان.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">منة المنان في الدفاع عن القرآن</div>
-            <div class="buttons">
-                <a href="books/منة المنان في الدفاع عن القرآن.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
-                <a href="books/منة المنان في الدفاع عن القرآن.pdf" download>تحميل</a>
-            </div>
-        </div>
-
-        <!-- الكتاب 15 -->
-        <div class="book">
-            <img src="covers/غلاف نظرات إسلامية في اعلان حقوق الإنسان.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">نظرات إسلامية في اعلان حقوق الإنسان</div>
-            <div class="buttons">
-                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" target="_blank">عرض <i class="fas fa-file-pdf"></i></a>
-                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" download>تحميل</a>
-            </div>
-        </div>
     </div>
 
     <!-- أزرار المشاركة في أسفل الصفحة -->
