--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
         .buttons {
             margin: 10px;
             display: flex;
-            flex-direction: column;
+            justify-content: space-between;
             gap: 10px;
         }
         .buttons a {
+            flex: 1;
             padding: 10px;
             background-color: #6c757d; /* لون مطابق لخلفية أزرار المشاركة */
             color: #fff;
@@ -78,14 +79,24 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 15px; /* مباعدة أكبر بين النص والأيقونة */
+        }
+        .buttons a i {
+            font-size: 1.2em;
         }
         .buttons a:hover {
             background-color: #5a6268;
         }
         .pdf-icon {
-            width: 20px;
-            height: auto;
+            padding: 10px;
+            background-color: #d9534f; /* لون مميز للأيقونة */
+            color: #fff;
+            border-radius: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .pdf-icon i {
+            font-size: 1.5em;
         }
         .share-buttons {
             margin: 20px 0;
@@ -125,8 +136,9 @@
             <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الأسرة في الإسلام</div>
             <div class="buttons">
-                <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض <img src="icons/pdf-icon.png" alt="PDF Icon" class="pdf-icon"></a>
+                <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض</a>
                 <a href="books/الأسرة في الإسلام.pdf" download>تحميل</a>
+                <a href="books/الأسرة في الإسلام.pdf" target="_blank" class="pdf-icon"><i class="fas fa-file-pdf"></i></a>
             </div>
         </div>
 
@@ -135,8 +147,9 @@
             <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الطائفية في نظر الاسلام</div>
             <div class="buttons">
-                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض <img src="icons/pdf-icon.png" alt="PDF Icon" class="pdf-icon"></a>
+                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض</a>
                 <a href="books/الطائفية في نظر الاسلام.pdf" download>تحميل</a>
+                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank" class="pdf-icon"><i class="fas fa-file-pdf"></i></a>
             </div>
         </div>
 
