--- a/index.html
+++ b/index.html
@@ -62,10 +62,25 @@
             font-weight: bold;
             margin: 15px 10px;
         }
-        .buttons {
-            margin: 10px;
+        .buttons-container {
             display: flex;
-            justify-content: space-between;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
+        .pdf-icon {
+            background-color: #d9534f; /* لون مميز للأيقونة */
+            color: #fff;
+            padding: 10px;
+            border-radius: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%; /* مساواة الارتفاع مع الزرين */
+        }
+        .buttons {
+            display: flex;
+            flex-direction: column;
             gap: 10px;
         }
         .buttons a {
@@ -80,23 +95,8 @@
             align-items: center;
             justify-content: center;
         }
-        .buttons a i {
-            font-size: 1.2em;
-        }
         .buttons a:hover {
             background-color: #5a6268;
-        }
-        .pdf-icon {
-            padding: 10px;
-            background-color: #d9534f; /* لون مميز للأيقونة */
-            color: #fff;
-            border-radius: 5px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .pdf-icon i {
-            font-size: 1.5em;
         }
         .share-buttons {
             margin: 20px 0;
@@ -135,10 +135,14 @@
         <div class="book">
             <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الأسرة في الإسلام</div>
-            <div class="buttons">
-                <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض</a>
-                <a href="books/الأسرة في الإسلام.pdf" download>تحميل</a>
-                <a href="books/الأسرة في الإسلام.pdf" target="_blank" class="pdf-icon"><i class="fas fa-file-pdf"></i></a>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض</a>
+                    <a href="books/الأسرة في الإسلام.pdf" download>تحميل</a>
+                </div>
             </div>
         </div>
 
@@ -146,10 +150,14 @@
         <div class="book">
             <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الطائفية في نظر الاسلام</div>
-            <div class="buttons">
-                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض</a>
-                <a href="books/الطائفية في نظر الاسلام.pdf" download>تحميل</a>
-                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank" class="pdf-icon"><i class="fas fa-file-pdf"></i></a>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض</a>
+                    <a href="books/الطائفية في نظر الاسلام.pdf" download>تحميل</a>
+                </div>
             </div>
         </div>
 
