--- a/index.html
+++ b/index.html
@@ -71,16 +71,12 @@
         .pdf-icon {
             background-color: #d9534f;
             color: #fff;
-            padding: 0 15px;
+            padding: 20px;
             border-radius: 5px;
             display: flex;
             align-items: center;
             justify-content: center;
-            height: 100%; /* مساواة الارتفاع مع الزرين */
-            flex-shrink: 0;
-        }
-        .pdf-icon i {
-            font-size: 2.5em; /* حجم الأيقونة ليكون متساويًا مع ارتفاع الزرين */
+            height: 100%;
         }
         .buttons {
             display: flex;
@@ -142,7 +138,7 @@
             <div class="book-title">الأسرة في الإسلام</div>
             <div class="buttons-container">
                 <div class="pdf-icon">
-                    <i class="fas fa-file-pdf"></i>
+                    <i class="fas fa-file-pdf fa-3x"></i>
                 </div>
                 <div class="buttons">
                     <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض</a>
@@ -157,7 +153,7 @@
             <div class="book-title">الطائفية في نظر الاسلام</div>
             <div class="buttons-container">
                 <div class="pdf-icon">
-                    <i class="fas fa-file-pdf"></i>
+                    <i class="fas fa-file-pdf fa-3x"></i>
                 </div>
                 <div class="buttons">
                     <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض</a>
@@ -166,8 +162,200 @@
             </div>
         </div>
 
-        <!-- باقي الكتب مشابهة -->
+        <!-- الكتاب 3 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول أوقات الصلاة.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث أوقات الصلاة</div>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf fa-3x"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/بحث أوقات الصلاة.pdf" target="_blank">عرض</a>
+                    <a href="books/بحث أوقات الصلاة.pdf" download>تحميل</a>
+                </div>
+            </div>
+        </div>
 
+        <!-- الكتاب 4 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التشويه الجسدي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التشويه الجسدي</div>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf fa-3x"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/بحث حول التشويه الجسدي.pdf" target="_blank">عرض</a>
+                    <a href="books/بحث حول التشويه الجسدي.pdf" download>تحميل</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- الكتاب 5 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التلقيح ا لصناعي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التلقيح الصناعي</div>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf fa-3x"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/بحث حول التلقيح الصناعي.pdf" target="_blank">عرض</a>
+                    <a href="books/بحث حول التلقيح الصناعي.pdf" download>تحميل</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- الكتاب 6 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول الغناء.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول الغناء</div>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf fa-3x"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/بحث حول الغناء.pdf" target="_blank">عرض</a>
+                    <a href="books/بحث حول الغناء.pdf" download>تحميل</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- الكتاب 7 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول القصة فقهياً.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول القصة فقهياً</div>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf fa-3x"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/بحث حول القصة فقهياً.pdf" target="_blank">عرض</a>
+                    <a href="books/بحث حول القصة فقهياً.pdf" download>تحميل</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- الكتاب 8 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول الكحول.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول الكحول</div>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf fa-3x"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/بحث حول الكحول.pdf" target="_blank">عرض</a>
+                    <a href="books/بحث حول الكحول.pdf" download>تحميل</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- الكتاب 9 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول خصائص النبي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول خصائص النبي</div>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf fa-3x"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/بحث حول خصائص النبي.pdf" target="_blank">عرض</a>
+                    <a href="books/بحث حول خصائص النبي.pdf" download>تحميل</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- الكتاب 10 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول قاعدة الإلزام.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول قاعدة الإلزام</div>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf fa-3x"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/بحث حول قاعدة الإلزام.pdf" target="_blank">عرض</a>
+                    <a href="books/بحث حول قاعدة الإلزام.pdf" download>تحميل</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- الكتاب 11 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول قراءة القرآن.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول قراءة القرآن الكريم</div>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf fa-3x"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/بحث حول قراءة القرآن الكريم.pdf" target="_blank">عرض</a>
+                    <a href="books/بحث حول قراءة القرآن الكريم.pdf" download>تحميل</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- الكتاب 12 -->
+        <div class="book">
+            <img src="covers/غلاف فقه الأخلاق ج1.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">فقه الأخلاق (الجزء الأول)</div>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf fa-3x"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/فقه الأخلاق (الجزء الأول).pdf" target="_blank">عرض</a>
+                    <a href="books/فقه الأخلاق (الجزء الأول).pdf" download>تحميل</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- الكتاب 13 -->
+        <div class="book">
+            <img src="covers/غلاف فقه الأخلاق ج2.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">فقه الأخلاق (الجزء الثاني)</div>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf fa-3x"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/فقه الأخلاق (الجزء الثاني).pdf" target="_blank">عرض</a>
+                    <a href="books/فقه الأخلاق (الجزء الثاني).pdf" download>تحميل</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- الكتاب 14 -->
+        <div class="book">
+            <img src="covers/غلاف منة المنان.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">منة المنان في الدفاع عن القرآن</div>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf fa-3x"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/منة المنان في الدفاع عن القرآن.pdf" target="_blank">عرض</a>
+                    <a href="books/منة المنان في الدفاع عن القرآن.pdf" download>تحميل</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- الكتاب 15 -->
+        <div class="book">
+            <img src="covers/غلاف نظرات إسلامية في اعلان حقوق الإنسان.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">نظرات إسلامية في اعلان حقوق الإنسان</div>
+            <div class="buttons-container">
+                <div class="pdf-icon">
+                    <i class="fas fa-file-pdf fa-3x"></i>
+                </div>
+                <div class="buttons">
+                    <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" target="_blank">عرض</a>
+                    <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" download>تحميل</a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- أزرار المشاركة في أسفل الصفحة -->
