--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             padding: 0;
         }
         h1 {
-            background-color: #6c757d;
+            background-color: #6c757d; /* لون مطابق لخلفية أزرار المشاركة */
             color: #fff;
             padding: 20px;
             margin: 0;
@@ -42,16 +42,16 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             overflow: hidden;
-            transition: transform 0.3s ease-in-out;
+            transition: transform 0.3s ease-in-out; /* تأثير التكبير عند المرور بالماوس */
             width: 250px;
             opacity: 0;
             transform: translateY(20px);
         }
         .book.visible {
-            animation: fadeIn 1.5s forwards;
+            animation: fadeIn 1.5s forwards; /* تطبيق تأثير fade-in */
         }
         .book:hover {
-            transform: scale(1.05);
+            transform: scale(1.05); /* إعادة تأثير التكبير عند مرور الماوس */
         }
         .book img {
             width: 100%;
@@ -62,46 +62,22 @@
             font-weight: bold;
             margin: 15px 10px;
         }
-        .buttons-container {
-            display: flex;
-            align-items: stretch;
-            justify-content: space-between;
-            gap: 10px;
-        }
         .buttons {
+            margin: 10px;
             display: flex;
             flex-direction: column;
             gap: 10px;
-            flex: 1;
         }
         .buttons a {
-            flex: 1;
             padding: 10px;
-            background-color: #6c757d;
+            background-color: #6c757d; /* لون مطابق لخلفية أزرار المشاركة */
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
         }
         .buttons a:hover {
             background-color: #5a6268;
-        }
-        .pdf-icon {
-            background-color: #d9534f;
-            color: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100%; /* مساواة الارتفاع مع الزرين */
-            flex-shrink: 0;
-        }
-        .pdf-icon i {
-            font-size: 2.5em;
         }
         .share-buttons {
             margin: 20px 0;
@@ -140,14 +116,9 @@
         <div class="book">
             <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الأسرة في الإسلام</div>
-            <div class="buttons-container">
-                <div class="buttons">
-                    <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض</a>
-                    <a href="books/الأسرة في الإسلام.pdf" download>تحميل</a>
-                </div>
-                <div class="pdf-icon">
-                    <i class="fas fa-file-pdf fa-3x"></i>
-                </div>
+            <div class="buttons">
+                <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض</a>
+                <a href="books/الأسرة في الإسلام.pdf" download>تحميل</a>
             </div>
         </div>
 
@@ -155,19 +126,141 @@
         <div class="book">
             <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الطائفية في نظر الاسلام</div>
-            <div class="buttons-container">
-                <div class="buttons">
-                    <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض</a>
-                    <a href="books/الطائفية في نظر الاسلام.pdf" download>تحميل</a>
-                </div>
-                <div class="pdf-icon">
-                    <i class="fas fa-file-pdf fa-3x"></i>
-                </div>
+            <div class="buttons">
+                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض</a>
+                <a href="books/الطائفية في نظر الاسلام.pdf" download>تحميل</a>
             </div>
         </div>
 
-        <!-- باقي الكتب مشابهة -->
+        <!-- الكتاب 3 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول أوقات الصلاة.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث أوقات الصلاة</div>
+            <div class="buttons">
+                <a href="books/بحث أوقات الصلاة.pdf" target="_blank">عرض</a>
+                <a href="books/بحث أوقات الصلاة.pdf" download>تحميل</a>
+            </div>
+        </div>
 
+        <!-- الكتاب 4 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التشويه الجسدي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التشويه الجسدي</div>
+            <div class="buttons">
+                <a href="books/بحث حول التشويه الجسدي.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول التشويه الجسدي.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 5 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول التلقيح ا لصناعي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول التلقيح الصناعي</div>
+            <div class="buttons">
+                <a href="books/بحث حول التلقيح الصناعي.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول التلقيح الصناعي.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 6 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول الغناء.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول العناء</div>
+            <div class="buttons">
+                <a href="books/بحث حول العناء.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول العناء.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 7 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول القصة فقهياً.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول القصة فقهياً</div>
+            <div class="buttons">
+                <a href="books/بحث حول القصة فقهياً.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول القصة فقهياً.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 8 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول الكحول.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول الكحول</div>
+            <div class="buttons">
+                <a href="books/بحث حول الكحول.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول الكحول.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 9 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول خصائص النبي.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول خصائص النبي</div>
+            <div class="buttons">
+                <a href="books/بحث حول خصائص النبي (ص).pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول خصائص النبي (ص).pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 10 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول قاعدة الإلزام.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول قاعدة الإلزام</div>
+            <div class="buttons">
+                <a href="books/بحث حول قاعدة الإلزام.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول قاعدة الإلزام.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 11 -->
+        <div class="book">
+            <img src="covers/غلاف بحث حول قراءة القرآن.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">بحث حول قراءة القرآن الكريم</div>
+            <div class="buttons">
+                <a href="books/بحث حول قراءة القرآن الكريم.pdf" target="_blank">عرض</a>
+                <a href="books/بحث حول قراءة القرآن الكريم.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 12 -->
+        <div class="book">
+            <img src="covers/غلاف فقه الأخلاق ج1.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">فقه الأخلاق (الجزء الأول)</div>
+            <div class="buttons">
+                <a href="books/فقه الأخلاق (الجزء الأول).pdf" target="_blank">عرض</a>
+                <a href="books/فقه الأخلاق (الجزء الأول).pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 13 -->
+        <div class="book">
+            <img src="covers/غلاف فقه الأخلاق ج2.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">فقه الأخلاق (الجزء الثاني)</div>
+            <div class="buttons">
+                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" target="_blank">عرض</a>
+                <a href="books/فقه الأخلاق (الجزء الثاني).pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 14 -->
+        <div class="book">
+            <img src="covers/غلاف منة المنان.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">منة المنان في الدفاع عن القرآن</div>
+            <div class="buttons">
+                <a href="books/منة المنان في الدفاع عن القرآن.pdf" target="_blank">عرض</a>
+                <a href="books/منة المنان في الدفاع عن القرآن.pdf" download>تحميل</a>
+            </div>
+        </div>
+
+        <!-- الكتاب 15 -->
+        <div class="book">
+            <img src="covers/غلاف نظرات إسلامية في اعلان حقوق الإنسان.jpeg" alt="غلاف الكتاب">
+            <div class="book-title">نظرات إسلامية في اعلان حقوق الإنسان</div>
+            <div class="buttons">
+                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" target="_blank">عرض</a>
+                <a href="books/نظرات إسلامية في اعلان حقوق الإنسان.pdf" download>تحميل</a>
+            </div>
+        </div>
     </div>
 
     <!-- أزرار المشاركة في أسفل الصفحة -->
@@ -186,7 +279,7 @@
                 entries.forEach(entry => {
                     if (entry.isIntersecting) {
                         entry.target.classList.add('visible');
-                        observer.unobserve(entry.target);
+                        observer.unobserve(entry.target); // إزالة المراقبة بعد العرض
                     }
                 });
             }, { threshold: 0.1 });
